add GC detail printing